--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:3306/db
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
 spring.datasource.username=postgres
-spring.datasource.password=123456
+spring.datasource.password=89125410048
 spring.jooq.sql-dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
