--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,3 +5,7 @@ spring.datasource.username=${LOCAL_NAME}
 spring.datasource.password=${LOCAL_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
