--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,5 @@ spring.jooq.sql-dialect=org.hibernate.dialect.PostgreSQL81Dialect
 
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+jda.token=MTA3MzI5ODQxNDUyMTAyNDUxMw.GNGD5g.TNB3Nly37ysmVJYn8gjTV3T2f82F2bjPhuUETA
