--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -8,3 +8,4 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
 jda.token=MTA3MzI5ODQxNDUyMTAyNDUxMw.GNGD5g.TNB3Nly37ysmVJYn8gjTV3T2f82F2bjPhuUETA
+messages.buffer-size=5
