--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,9 @@ build:
     - if: $CI_PIPELINE_SOURCE == 'merge_request_event'
   script:
     - mvn clean install -Dspring.profiles.active=prod
+  artifacts:
+    paths:
+      - bot/*.jar
 
 deploy:
   stage: deploy
@@ -24,7 +27,9 @@ deploy:
 #      - ssh-keyscan $HOST >> ~/.ssh/known_hosts
 #      - chmod 644 ~/.ssh/known_hosts
   script:
-    - java -jar -Djda.token=$TOKEN -Dspring.profiles.active=prod kataplusbot-0.0.1-SNAPSHOT.jar
+    - cd bot
+    - kill $(cat ./pid.file)
+    - java -jar -Djda.token=$TOKEN -Dspring.profiles.active=prod kataplusbot-0.0.1-SNAPSHOT.jar & echo $! > ./pid.file &
 #      - ssh -tt $USER@$HOST "sudo rm -rf bot && mkdir bot"
 ##      - scp -r * $USER@$HOST:$APP_PATH/
 #      - ssh $USER@$HOST "cd bot && docker build -t bot ."
