--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,18 +18,6 @@ deploy:
   stage: deploy
   only:
     - master
-#    before_script:
-#      - which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )
-#      - eval $(ssh-agent -s)
-#      - echo "$SSH_PRIVATE_KEY" | ssh-add -
-#      - mkdir -p ~/.ssh
-#      - chmod 700 ~/.ssh
-#      - ssh-keyscan $HOST >> ~/.ssh/known_hosts
-#      - chmod 644 ~/.ssh/known_hosts
   script:
-#    - kill $(cat ./pid.file)
+    - kill $(cat ./pid.file)
     - java -jar -Djda.token=$TOKEN -Dspring.profiles.active=prod kataplusbot-0.0.1-SNAPSHOT.jar & echo $! > ./pid.file &
-#      - ssh -tt $USER@$HOST "sudo rm -rf bot && mkdir bot"
-##      - scp -r * $USER@$HOST:$APP_PATH/
-#      - ssh $USER@$HOST "cd bot && docker build -t bot ."
-#      - ssh $USER@$HOST "cd bot && docker rmi bot && docker compose up -d"
