--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,5 +19,5 @@ deploy:
   only:
     - master
   script:
-    - ps aux | pgrep java | xargs kill
-    - java -jar -Djda.token=$TOKEN -Dspring.profiles.active=prod kataplusbot-0.0.1-SNAPSHOT.jar & echo $! > ./pid.file &
+    - ps aux | pgrep java | xargs kill || java -jar -Djda.token=$TOKEN -Dspring.profiles.active=prod kataplusbot-0.0.1-SNAPSHOT.jar &
+    - java -jar -Djda.token=$TOKEN -Dspring.profiles.active=prod kataplusbot-0.0.1-SNAPSHOT.jar &
