--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 # JavaPlusBot properties
-jda.token=MTA3MzI5ODQxNDUyMTAyNDUxMw.GxtmLt.Or4mVkTtjbX-Y-H5lF2psSTq4tViuDx667KE1E
+jda.token=${DISCORD_TOKEN}
